--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="title_temperature">Temperature</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="your_lenght">Your lenght:</string>
+    
+    <string-array name="lenght_first">
+         <item>Kilometer</item>
+         <item>Meter</item>
+         <item>Decimeter</item>
+         <item>Centimeter</item>
+        <item>Milimeter</item>
+    </string-array>
 </resources>
