--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_temperature">Temperature</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="calculate">Calculate</string>
     <string name="your_lenght">Your lenght:</string>
     <string name="kilometer">Kilometer</string>
     <string name="meter">Meter</string>
